Revised result and computations