@@ -22,6 +22,7 @@ package de.featjar.formula.transformer;
 
 import de.featjar.base.computation.*;
 import de.featjar.base.data.Result;
+import de.featjar.base.task.IMonitor;
 import de.featjar.base.tree.structure.ITree;
 import de.featjar.formula.structure.IExpression;
 import de.featjar.formula.structure.formula.IFormula;
@@ -40,7 +41,7 @@ import java.util.stream.Collectors;
  * @author Sebastian Krieter
  */
 public class ComputeNormalFormFormula extends AComputation<IFormula> implements ITransformation<IFormula> {
-    protected static final Dependency<IFormula> NNF_FORMULA = newDependency();
+    protected static final Dependency<IFormula> NNF_FORMULA = newRequiredDependency();
 
     public static class MaximumNumberOfLiteralsExceededException extends Exception {
     }
@@ -93,56 +94,55 @@ public class ComputeNormalFormFormula extends AComputation<IFormula> implements 
     }
 
     @Override
-    public FutureResult<IFormula> compute() {
-        return getInput().get().thenComputeResult((formula, monitor) -> {
-            if (normalForm.equals(IFormula.NormalForm.CNF))
-                formula = (formula instanceof And) ? (And) formula : new And(formula);
-            if (normalForm.equals(IFormula.NormalForm.DNF))
-                formula = (formula instanceof Or) ? (Or) formula : new Or(formula);
+    public Result<IFormula> computeResult(List<?> results, IMonitor monitor) {
+        IFormula formula = NNF_FORMULA.get(results);
+        if (normalForm.equals(IFormula.NormalForm.CNF))
+            formula = (formula instanceof And) ? (And) formula : new And(formula);
+        if (normalForm.equals(IFormula.NormalForm.DNF))
+            formula = (formula instanceof Or) ? (Or) formula : new Or(formula);
 
-            final ArrayList<PathElement> path = new ArrayList<>();
-            final ArrayDeque<IExpression> stack = new ArrayDeque<>();
-            stack.addLast(formula);
-            while (!stack.isEmpty()) {
-                final IExpression curNode = stack.getLast();
-                final boolean firstEncounter = path.isEmpty() || (curNode != path.get(path.size() - 1).expression);
-                if (firstEncounter) {
-                    if (curNode instanceof Literal) {
-                        final PathElement parent = path.get(path.size() - 1);
-                        parent.newChildren.add(curNode);
-                        stack.removeLast();
-                    } else {
-                        path.add(new PathElement(curNode));
-                        curNode.getChildren().forEach(stack::addLast);
-                    }
+        final ArrayList<PathElement> path = new ArrayList<>();
+        final ArrayDeque<IExpression> stack = new ArrayDeque<>();
+        stack.addLast(formula);
+        while (!stack.isEmpty()) {
+            final IExpression curNode = stack.getLast();
+            final boolean firstEncounter = path.isEmpty() || (curNode != path.get(path.size() - 1).expression);
+            if (firstEncounter) {
+                if (curNode instanceof Literal) {
+                    final PathElement parent = path.get(path.size() - 1);
+                    parent.newChildren.add(curNode);
+                    stack.removeLast();
                 } else {
-                    final PathElement currentElement = path.remove(path.size() - 1);
-                    curNode.setChildren(currentElement.newChildren);
+                    path.add(new PathElement(curNode));
+                    curNode.getChildren().forEach(stack::addLast);
+                }
+            } else {
+                final PathElement currentElement = path.remove(path.size() - 1);
+                curNode.setChildren(currentElement.newChildren);
 
+                if (!path.isEmpty()) {
+                    final PathElement parentElement = path.get(path.size() - 1);
+                    parentElement.maxDepth = Math.max(currentElement.maxDepth + 1, parentElement.maxDepth);
+                }
+
+                if ((clauseClass == curNode.getClass()) && (currentElement.maxDepth > 0)) {
+                    final PathElement parentElement = path.get(path.size() - 1);
+                    try {
+                        parentElement.newChildren.addAll(convert(curNode));
+                    } catch (MaximumNumberOfLiteralsExceededException e) {
+                        return Result.empty(e);
+                    }
+                    parentElement.maxDepth = 1;
+                } else {
                     if (!path.isEmpty()) {
                         final PathElement parentElement = path.get(path.size() - 1);
-                        parentElement.maxDepth = Math.max(currentElement.maxDepth + 1, parentElement.maxDepth);
+                        parentElement.newChildren.add(curNode);
                     }
-
-                    if ((clauseClass == curNode.getClass()) && (currentElement.maxDepth > 0)) {
-                        final PathElement parentElement = path.get(path.size() - 1);
-                        try {
-                            parentElement.newChildren.addAll(convert(curNode));
-                        } catch (MaximumNumberOfLiteralsExceededException e) {
-                            return Result.empty(e);
-                        }
-                        parentElement.maxDepth = 1;
-                    } else {
-                        if (!path.isEmpty()) {
-                            final PathElement parentElement = path.get(path.size() - 1);
-                            parentElement.newChildren.add(curNode);
-                        }
-                    }
-                    stack.removeLast();
                 }
+                stack.removeLast();
             }
-            return Result.of(formula);
-        });
+        }
+        return Result.of(formula);
     }
 
     @SuppressWarnings("unchecked")
